--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 </head>
 <body>
     <div class="box">
-        <div class="crypto">
-            <a href="https://turpalho.github.io/landingtesting/">Академия Криптохаляль</a>
+        <div class="crypto" onclick="location.href='about.html';">
+            <a href="#">Академия Криптохаляль</a>
         </div>
-        <div class="smart">
+        <div class="smart" onclick="location.href='about.html';">
             <a href="#">Smart money</a>
         </div>
         <div class="skalp">
-            <div class="man">
+            <div class="man" onclick="location.href='faq.html';">
                 <a href="#"><p>Скальпинг для мужчин</p></a>
             </div>
-            <div class="woman">
+            <div class="woman" onclick="location.href='faq.html';">
                 <a href="#"><p>Скальпинг для женщин</p></a>
             </div>
         </div>
         <div class="foot">
-            <div class="kids">
+            <div class="kids" onclick="location.href='faq.html';">
                 <a href="#">Crypto Kids</a>
             </div>
-            <div class="faq">
-                <a href="https://turpalho.github.io/landingAbout/#">FAQ</a>
+            <div class="faq" onclick="location.href='faq.html';">
+                <a href="#">FAQ</a>
             </div>
         </div>
     </div>
