--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 </head>
 <body>
     <div class="box">
-        <div class="crypto" onclick="location.href='about.html';">
+        <div class="crypto" onclick="location.href='?nextpage=about.html';">
             <a href="#">Академия Криптохаляль</a>
         </div>
-        <div class="smart" onclick="location.href='about.html';">
+        <div class="smart" onclick="location.href='?nextpage=about.html';">
             <a href="#">Smart money</a>
         </div>
         <div class="skalp">
-            <div class="man" onclick="location.href='faq.html';">
+            <div class="man" onclick="location.href='?nextpage=faq.html';">
                 <a href="#"><p>Скальпинг для мужчин</p></a>
             </div>
-            <div class="woman" onclick="location.href='faq.html';">
+            <div class="woman" onclick="location.href='?nextpage=faq.html';">
                 <a href="#"><p>Скальпинг для женщин</p></a>
             </div>
         </div>
         <div class="foot">
-            <div class="kids" onclick="location.href='faq.html';">
+            <div class="kids" onclick="location.href='?nextpage=faq.html';">
                 <a href="#">Crypto Kids</a>
             </div>
-            <div class="faq" onclick="location.href='faq.html';">
+            <div class="faq" onclick="location.href='?nextpage=faq.html';">
                 <a href="#">FAQ</a>
             </div>
         </div>
