--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
 <body>
     <div class="box">
         <div class="crypto" onclick="location.href='?nextpage=about.html';">
-            <a href="#">Академия Криптохаляль</a>
+            <a href="?nextpage=about.html">Академия Криптохаляль</a>
         </div>
         <div class="smart" onclick="location.href='?nextpage=about.html';">
-            <a href="#">Smart money</a>
+            <a href="?nextpage=about.html">Smart money</a>
         </div>
         <div class="skalp">
             <div class="man" onclick="location.href='?nextpage=faq.html';">
-                <a href="#"><p>Скальпинг для мужчин</p></a>
+                <a href="?nextpage=faq.html"><p>Скальпинг для мужчин</p></a>
             </div>
             <div class="woman" onclick="location.href='?nextpage=faq.html';">
-                <a href="#"><p>Скальпинг для женщин</p></a>
+                <a href="?nextpage=faq.html"><p>Скальпинг для женщин</p></a>
             </div>
         </div>
         <div class="foot">
             <div class="kids" onclick="location.href='?nextpage=faq.html';">
-                <a href="#">Crypto Kids</a>
+                <a href="?nextpage=faq.html">Crypto Kids</a>
             </div>
             <div class="faq" onclick="location.href='?nextpage=faq.html';">
-                <a href="#">FAQ</a>
+                <a href="?nextpage=faq.html">FAQ</a>
             </div>
         </div>
     </div>
