--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 </head>
 <body>
     <div class="box">
-        <div class="crypto" onclick="location.href='?nextpage=about.html';">
-            <a href="?nextpage=about.html">Академия Криптохаляль</a>
+        <div class="crypto">
+            <a href="?nextpage=1">Академия Криптохаляль</a>
         </div>
-        <div class="smart" onclick="location.href='?nextpage=about.html';">
-            <a href="?nextpage=about.html">Smart money</a>
+        <div class="smart">
+            <a href="?nextpage=1">Smart money</a>
         </div>
         <div class="skalp">
-            <div class="man" onclick="location.href='?nextpage=faq.html';">
-                <a href="?nextpage=faq.html"><p>Скальпинг для мужчин</p></a>
+            <div class="man">
+                <a href="?nextpage=1"><p>Скальпинг для мужчин</p></a>
             </div>
             <div class="woman" onclick="location.href='?nextpage=faq.html';">
-                <a href="?nextpage=faq.html"><p>Скальпинг для женщин</p></a>
+                <a href="#"><p>Скальпинг для женщин</p></a>
             </div>
         </div>
         <div class="foot">
             <div class="kids" onclick="location.href='?nextpage=faq.html';">
-                <a href="?nextpage=faq.html">Crypto Kids</a>
+                <a href="#">Crypto Kids</a>
             </div>
-            <div class="faq" onclick="location.href='?nextpage=faq.html';">
-                <a href="?nextpage=faq.html">FAQ</a>
+            <div class="faq">
+                <a href="?nextpage=1">FAQ</a>
             </div>
         </div>
     </div>
