--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <!-- <script src="https://telegram.org/js/telegram-web-app.js?1"></script> -->
 
     <title>testBtns</title>
+    
+    <script>
+        function setThemeClass() {
+            document.documentElement.className = Telegram.WebApp.colorScheme;
+        }
+
+        Telegram.WebApp.onEvent('themeChanged', setThemeClass);
+        setThemeClass();
+
+    </script>
 </head>
 <body>
     <div class="box">
