--- a/index.html
+++ b/index.html
@@ -7,19 +7,9 @@
 
     <link rel="stylesheet" href="css/btnStyle.css">
 
-    <!-- <script src="https://telegram.org/js/telegram-web-app.js?1"></script> -->
+    <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
 
     <title>testBtns</title>
-    
-    <script>
-        function setThemeClass() {
-            document.documentElement.className = Telegram.WebApp.colorScheme;
-        }
-
-        Telegram.WebApp.onEvent('themeChanged', setThemeClass);
-        setThemeClass();
-
-    </script>
 </head>
 <body>
     <div class="box">
