--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 </head>
 <body>
     <div class="box">
-        <div class="crypto">
-            <a href="?nextpage=1">Академия Криптохаляль</a>
+        <div class="crypto" onclick="location.href='https://turpalho.github.io/landingtesting/';">
+            <a href="#">Академия Криптохаляль</a>
         </div>
-        <div class="smart">
-            <a href="?nextpage=1">Smart money</a>
+        <div class="smart" onclick="location.href='https://turpalho.github.io/landingtesting/';">
+            <a href="#">Smart money</a>
         </div>
         <div class="skalp">
-            <div class="man">
-                <a href="?nextpage=1"><p>Скальпинг для мужчин</p></a>
+            <div class="man" onclick="location.href='https://turpalho.github.io/landingAbout/';">
+                <a href="#"><p>Скальпинг для мужчин</p></a>
             </div>
-            <div class="woman" onclick="location.href='?nextpage=faq.html';">
+            <div class="woman" onclick="location.href='https://turpalho.github.io/landingAbout/';">
                 <a href="#"><p>Скальпинг для женщин</p></a>
             </div>
         </div>
         <div class="foot">
-            <div class="kids" onclick="location.href='?nextpage=faq.html';">
+            <div class="kids" onclick="location.href='https://turpalho.github.io/landingAbout/';">
                 <a href="#">Crypto Kids</a>
             </div>
-            <div class="faq">
+            <div class="faq" onclick="location.href='https://turpalho.github.io/landingAbout/';">
                 <a href="?nextpage=1">FAQ</a>
             </div>
         </div>
