--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="box">
-        <div class="crypto" onclick="location.href='https://turpalho.github.io/landingtesting/';">
+        <div class="crypto" onclick="window.open('https://turpalho.github.io/landingtesting/','mywindow');">
             <a href="#">Академия Криптохаляль</a>
         </div>
         <div class="smart" onclick="location.href='https://turpalho.github.io/landingtesting/';">
