--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div class="box">
         <div class="crypto" onclick="window.open('https://turpalho.github.io/landingtesting/','mywindow');">
-            <a href="#">Академия Криптохаляль</a>
+            <p>Академия Криптохаляль</p>
         </div>
-        <div class="smart" onclick="location.href='https://turpalho.github.io/landingtesting/';">
-            <a href="#">Smart money</a>
+        <div class="smart">
+            <a href="https://turpalho.github.io/landingtesting/">Smart money</a>
         </div>
         <div class="skalp">
             <div class="man" onclick="location.href='https://turpalho.github.io/landingAbout/';">
