--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
             </div>
         </div>
     </div>
+    <script> 
+        $('#regular_link').attr('href', $('#regular_link').attr('href') + location.hash);
+    </script>
 </body>
 </html>
