--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </div>
         </div>
     </div>
+    <script src="https://webappcontent.telegram.org/js/jquery.min.js"></script>
     <script> 
         $('#regular_link').attr('href', $('#regular_link').attr('href') + location.hash);
     </script>
