--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="box">
         <div class="crypto" onclick="window.open('https://turpalho.github.io/landingtesting/','mywindow');">
-            <p>Академия Криптохаляль</p>
+            <a href"#">Академия Криптохаляль</a>
         </div>
         <div class="smart">
             <a href="https://turpalho.github.io/landingtesting/">Smart money</a>
