--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href"#">Академия Криптохаляль</a>
         </div>
         <div class="smart">
-            <a href="https://turpalho.github.io/landingtesting/">Smart money</a>
+            <a href="?nextpage=1#https://turpalho.github.io/landingtesting/">Smart money</a>
         </div>
         <div class="skalp">
             <div class="man" onclick="location.href='https://turpalho.github.io/landingAbout/';">
@@ -31,8 +31,8 @@
             <div class="kids" onclick="location.href='https://turpalho.github.io/landingAbout/';">
                 <a href="#">Crypto Kids</a>
             </div>
-            <div class="faq" onclick="location.href='https://turpalho.github.io/landingAbout/';">
-                <a href="?nextpage=1">FAQ</a>
+            <div class="faq" onclick="location.href='?nextpage=1#https://turpalho.github.io/landingAbout/';">
+                <a href="#">FAQ</a>
             </div>
         </div>
     </div>
