--- a/index.html
+++ b/index.html
@@ -90,6 +90,25 @@
         BackButton.onClick(function() {
             loadMain();
         })
+
+
+        function setViewportData() {
+            $('.body').attr('style', '' + (Telegram.WebApp.isExpanded ? "background-image: url(img/lightFull.png); background-size: 100% 120vh;" : "background-image: url(img/light.png);"));
+            $('.animation').attr('style', '' + (Telegram.WebApp.isExpanded ? 'margin-top: 100px; margin-bottom: 50px;' : 'margin-top: 0px;'));
+
+            if (screenHeight > 800){
+                $('.support_btn').attr('style', '' + (Telegram.WebApp.isExpanded ? 'margin-top: 180px;' : 'margin-top: 0px;'));
+            }
+            else if (screenHeight > 760){
+                $('.support_btn').attr('style', '' + (Telegram.WebApp.isExpanded ? 'margin-top: 120px;' : 'margin-top: 0px;'));
+            }
+            else {
+                $('.support_btn').attr('style', '' + (Telegram.WebApp.isExpanded ? 'margin-top: 80px;' : 'margin-top: 0px;'));
+            }
+        }
+
+        Telegram.WebApp.onEvent('viewportChanged', setViewportData);
+        setViewportData();
     </script>
 </body>
 </html>
