--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div id="main">
         <div id="main-sections">
             <div class="main-section" onclick="loadMenu();">Академия Криптохаляль</div>
-            <div class="main-section" onclick="loadMoney();">Smart money</div>
-            <div class="main-skalp" onclick="loadSkalp();">
+            <div class="main-section" onclick="loadMenu();">Smart money</div>
+            <div class="main-skalp" onclick="loadMenu();">
                 <div class="skalp">Скальпинг для мужчин</div>
                 <div class="skalp">Скальпинг для женщин</div>
             </div>
@@ -57,10 +57,55 @@
             </center>
         </div>
     </div>
+    <div id="faq-menu">
+        <div class="faq-menus">
+            <center>
+                <div class="item">
+                    <div class="item-text">
+                        <h1 class="faq">F.A.Q</h1>
+                    </div>
+                    <div class="animation">
+                        <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_wloxwco0.json"  background="transparent"  speed="1"  style="width: 210px; margin: auto;"  loop autoplay></lottie-player>
+                    </div>
+                    <!-- https://assets7.lottiefiles.com/packages/lf20_QPbPfUVWRe.json -->
+                    <div class="faq-class" style="margin: auto; margin-left: 20px; margin-right: 20px; max-width: 400px;">
+                            <div style="margin-bottom: 15px;">
+                                <a id='1' href="#">
+                                    <div id="d1" style="height: 35px; display: flex; color: #fff; border-radius: 10px; background-image: linear-gradient(138deg, rgba(170,62,166,0.6) 0%, rgba(87,170,211,0.6) 100%);">
+                                        <h6 id="h61" style="margin:auto; margin-left: 5px; font-size: 12pt; font-family: 'Comfortaa', cursive;">Ваши курсы аманат?</h6>
+                                        <img id="img1" src="img/arrow.svg" style="width:25px; margin: auto; margin-right: 5px;"/>
+                                    </div>
+                                </a>
+                                <p id="11" style="display: none; font-size: 12px; font-family: 'Comfortaa', cursive; letter-spacing: 1px;">Да, вы можете изучать наши курсы только с женой/мужем и детьми!</p> 
+                            </div>
+                            <div style="margin-bottom: 15px;">
+                                <a id='2' href="#">
+                                    <div id="d2" style="height: 35px; display: flex; color: #fff; border-radius: 10px; background-image: linear-gradient(138deg, rgba(170,62,166,0.6) 0%, rgba(87,170,211,0.6) 100%);">
+                                        <h6 id="h62" style="margin:auto; margin-left: 5px; font-size: 12pt; font-family: 'Comfortaa', cursive;">Какой курс мне посоветуете?</h6>
+                                        <img id="img2" src="img/arrow.svg" style="width:25px; margin: auto; margin-right: 5px;"/>
+                                    </div>
+                                </a>
+                                <p id="21" style="display: none; font-size: 12px; font-family: 'Comfortaa', cursive; letter-spacing: 1px;">Если вы новичок - начните с бонусного курса по криптологии.</p>
+                            </div>
+                            <div>
+                                <a id='3' href="#">
+                                    <div  id="d3" style="height: 35px; display: flex; color: #fff; border-radius: 10px; background-image: linear-gradient(138deg, rgba(170,62,166,0.6) 0%, rgba(87,170,211,0.6) 100%);">
+                                        <h6 id="h63" style="margin:auto; margin-left: 5px; font-size: 12pt; font-family: 'Comfortaa', cursive;">А рассрочка есть?</h6>
+                                        <img id="img3" src="img/arrow.svg" style="width:25px; margin: auto; margin-right: 5px;"/>
+                                    </div>
+                                </a>
+                                <p id="31" style="display: none; font-size: 12px; font-family: 'Comfortaa', cursive; letter-spacing: 1px;">Есть, но не на каждый курс, напишите нам - поможем!</p> 
+                            </div>
+                    </div>
+                </div>
+            </center>
+        </div>
+    </div>
 
     <script>
         Telegram.WebApp.ready();
         let menuBtns = document.getElementById("main-sections");
+        let faqPage = document.getElementById("faq-menu")
         let aboutPage = document.getElementById("abouts")
 
         let BackButton = window.Telegram.WebApp.BackButton;
@@ -80,10 +125,19 @@
 	
             menuBtns.style.display = "grid";
             aboutPage.style.display = "none";
+            faqPage.style.display = "none";
 
             /* Telegram WebApp */
             if (BackButton.isVisible) {
                 BackButton.hide();
+            }
+        }
+
+        function loadFaq() {
+            menuBtns.style.display = "none";
+            faqPage.style.display = "block";
+            if (!BackButton.isVisible) {
+                BackButton.show();
             }
         }
 
@@ -109,6 +163,151 @@
 
         Telegram.WebApp.onEvent('viewportChanged', setViewportData);
         setViewportData();
+
+
+        $( "#1" ).click(function() {
+            if ($("#21").is(':visible')) {
+                $( "#21" ).slideToggle();
+            }
+            if ($("#31").is(':visible')) {
+                $( "#31" ).slideToggle();
+            }
+            
+            if(!$("#11").is(':visible')){
+                document.getElementById("h62").style.transition = "font 0.5s";
+                document.getElementById("h62").style.fontSize = "10px";
+                document.getElementById("d2").style.transition = "font 0.5s";
+                document.getElementById("d2").style.height = "15px";
+                document.getElementById("img2").style.transition = "font 0.5s";
+                document.getElementById("img2").style.width = "13px";
+
+                document.getElementById("h63").style.transition = "font 0.5s";
+                document.getElementById("h63").style.fontSize = "10px";
+                document.getElementById("d3").style.transition = "font 0.5s";
+                document.getElementById("d3").style.height = "15px";
+                document.getElementById("img3").style.transition = "font 0.5s";
+                document.getElementById("img3").style.width = "13px";
+            }
+            else{
+                document.getElementById("h62").style.transition = "font 0.5s";
+                document.getElementById("h62").style.fontSize = "12pt";
+                document.getElementById("d2").style.transition = "font 0.5s";
+                document.getElementById("d2").style.height = "35px";
+                document.getElementById("img2").style.transition = "font 0.5s";
+                document.getElementById("img2").style.width = "25px";
+
+                document.getElementById("h63").style.transition = "font 0.5s";
+                document.getElementById("h63").style.fontSize = "12pt";
+                document.getElementById("d3").style.transition = "font 0.5s";
+                document.getElementById("d3").style.height = "35px";
+                document.getElementById("img3").style.transition = "font 0.5s";
+                document.getElementById("img3").style.width = "25px";
+            }
+
+            
+            document.getElementById("h61").style.transition = "font 0.5s";
+            document.getElementById("h61").style.fontSize = "12pt";
+            document.getElementById("d1").style.transition = "font 0.5s";
+            document.getElementById("d1").style.height = "35px";
+            document.getElementById("img1").style.transition = "font 0.5s";
+            document.getElementById("img1").style.width = "25px";
+
+            $( "#11" ).slideToggle();
+        });
+        $( "#2" ).click(function() {
+            if ($("#11").is(':visible')) {
+                $( "#11" ).slideToggle();
+            }
+            if ($("#31").is(':visible')) {
+                $( "#31" ).slideToggle();
+            }
+
+            if(!$("#21").is(':visible')){
+                document.getElementById("h61").style.transition = "font 0.5s";
+                document.getElementById("h61").style.fontSize = "10px";
+                document.getElementById("d1").style.transition = "font 0.5s";
+                document.getElementById("d1").style.height = "15px";
+                document.getElementById("img1").style.transition = "font 0.5s";
+                document.getElementById("img1").style.width = "13px";
+
+                document.getElementById("h63").style.transition = "font 0.5s";
+                document.getElementById("h63").style.fontSize = "10px";
+                document.getElementById("d3").style.transition = "font 0.5s";
+                document.getElementById("d3").style.height = "15px";
+                document.getElementById("img3").style.transition = "font 0.5s";
+                document.getElementById("img3").style.width = "13px";
+            }
+            else{
+                document.getElementById("h61").style.transition = "font 0.5s";
+                document.getElementById("h61").style.fontSize = "12pt";
+                document.getElementById("d1").style.transition = "font 0.5s";
+                document.getElementById("d1").style.height = "35px";
+                document.getElementById("img1").style.transition = "font 0.5s";
+                document.getElementById("img1").style.width = "25px";
+
+                document.getElementById("h63").style.transition = "font 0.5s";
+                document.getElementById("h63").style.fontSize = "12pt";
+                document.getElementById("d3").style.transition = "font 0.5s";
+                document.getElementById("d3").style.height = "35px";
+                document.getElementById("img3").style.transition = "font 0.5s";
+                document.getElementById("img3").style.width = "25px";
+            }
+
+            document.getElementById("h62").style.transition = "font 1s";
+            document.getElementById("h62").style.fontSize = "12pt";
+            document.getElementById("d2").style.transition = "font 0.5s";
+            document.getElementById("d2").style.height = "35px";
+            document.getElementById("img2").style.transition = "font 0.5s";
+            document.getElementById("img2").style.width = "25px";
+            $( "#21" ).slideToggle();
+        });
+        $( "#3" ).click(function() {
+            if ($("#21").is(':visible')) {
+                $( "#21" ).slideToggle();
+            }
+            if ($("#11").is(':visible')) {
+                $( "#11" ).slideToggle();
+            }
+
+            if(!$("#31").is(':visible')){
+                document.getElementById("h61").style.transition = "font 0.5s";
+                document.getElementById("h61").style.fontSize = "10px";
+                document.getElementById("d1").style.transition = "font 0.5s";
+                document.getElementById("d1").style.height = "15px";
+                document.getElementById("img1").style.transition = "font 0.5s";
+                document.getElementById("img1").style.width = "13px";
+
+                document.getElementById("h62").style.transition = "font 0.5s";
+                document.getElementById("h62").style.fontSize = "10px";
+                document.getElementById("d2").style.transition = "font 0.5s";
+                document.getElementById("d2").style.height = "15px";
+                document.getElementById("img2").style.transition = "font 0.5s";
+                document.getElementById("img2").style.width = "13px";
+            }
+            else{
+                document.getElementById("h61").style.transition = "font 0.5s";
+                document.getElementById("h61").style.fontSize = "12pt";
+                document.getElementById("d1").style.transition = "font 0.5s";
+                document.getElementById("d1").style.height = "35px";
+                document.getElementById("img1").style.transition = "font 0.5s";
+                document.getElementById("img1").style.width = "25px";
+
+                document.getElementById("h62").style.transition = "font 0.5s";
+                document.getElementById("h62").style.fontSize = "12pt";
+                document.getElementById("d2").style.transition = "font 0.5s";
+                document.getElementById("d2").style.height = "35px";
+                document.getElementById("img2").style.transition = "font 0.5s";
+                document.getElementById("img2").style.width = "25px";
+            }
+
+            document.getElementById("h63").style.transition = "font 0.5s";
+            document.getElementById("h63").style.fontSize = "12pt";
+            document.getElementById("d3").style.transition = "font 0.5s";
+            document.getElementById("d3").style.height = "35px";
+            document.getElementById("img3").style.transition = "font 0.5s";
+            document.getElementById("img3").style.width = "25px";
+            $( "#31" ).slideToggle();
+        });
     </script>
 </body>
 </html>
